--- a/themes/default-bootstrap/css/global.css
+++ b/themes/default-bootstrap/css/global.css
@@ -413,8 +413,7 @@ h4 small, .h4 small {
 
 ul,
 ol {
-  margin-top: 0;
-  margin-bottom: 9px; }
+  margin-top: 0; }
   ul ul,
   ul ol,
   ol ul,
@@ -5499,7 +5498,7 @@ header {
   z-index: 1;
   position: relative;
   background: #fff;
-  padding: 10px 0; }
+  padding: 20px 0; }
   header .banner {
     background: black;
     max-height: 100%; }
@@ -7014,27 +7013,26 @@ div.star a:hover {
     width: 20px; }
 
 .footer-container {
-  background-color: #333; }
+  background-color: #fff; height:4%; }
   @media (min-width: 768px) {
-    .footer-container {
-      background: url(../img/footer-bg.png) repeat-x #333; } }
-  .footer-container .container {
-    padding-bottom: 100px; }
+    .footer-container { } }
+  .footer-container .container { }
   .footer-container #footer {
-    color: #777777; }
+    color: #777777;
+    position:relative;
+    top:50%;
+    margin-top:-9px; }
     .footer-container #footer .row {
       position: relative; }
     .footer-container #footer ul.row {
       position: static; }
-    .footer-container #footer .footer-block {
-      margin-top: 45px; }
+    .footer-container #footer .footer-block { display:inline-block;vertical-align: top;float:right;}
       @media (max-width: 767px) {
         .footer-container #footer .footer-block {
           margin-top: 20px; } }
     .footer-container #footer a {
       color: #777777; }
-      .footer-container #footer a:hover {
-        color: #fff; }
+      .footer-container #footer a:hover { font-weight: 800; }
     .footer-container #footer h4 {
       font: 600 18px/22px "Open Sans", sans-serif;
       color: #fff;
@@ -7056,11 +7054,14 @@ div.star a:hover {
             content: "\f056"; } }
       .footer-container #footer h4 a {
         color: #fff; }
-    .footer-container #footer ul li {
-      padding-bottom: 8px; }
-      .footer-container #footer ul li a {
-        font-weight: bold;
-        text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.4); }
+    .footer-container #footer ul li { display: inline-block; text-transform: uppercase; }
+    .footer-container #footer .footer-block ul li { margin-left:20px; }
+      .footer-container #footer ul li a { 
+        font-family: 'Raleway', serif;
+        font-weight: 600;
+        font-size:12px;
+        color:#000; }
+        .footer-container #footer .footer-block ul li a:hover{ font-weight: 600; }
     .footer-container #footer #block_contact_infos {
       border-left: 1px solid #515151; }
       @media (max-width: 767px) {
