--- a/themes/default-bootstrap/css/modules/blocklanguages/blocklanguages.css
+++ b/themes/default-bootstrap/css/modules/blocklanguages/blocklanguages.css
@@ -1,7 +1,7 @@
 #languages-block-top {
-  float: right;
-  border-left: 1px solid #515151;
-  position: relative; }
+  position: relative;
+  display:inline-block;
+  vertical-align: top; }
   @media (max-width: 479px) {
     #languages-block-top {
       width: 25%; } }
@@ -39,23 +39,16 @@
       #languages-block-top div.current .cur-label {
         display: none; } }
   #languages-block-top ul {
-    display: none;
-    position: absolute;
-    top: 37px;
-    left: 0;
-    width: 157px;
-    background: #333;
-    z-index: 2; }
+    display:inline-block; }
     #languages-block-top ul li {
-      color: #fff;
-      line-height: 35px;
+      display: inline-block;
+      color: #000;
       font-size: 13px; }
       #languages-block-top ul li a,
-      #languages-block-top ul li > span {
-        padding: 0 10px 0 12px;
-        display: block;
-        color: #fff; }
-      #languages-block-top ul li.selected, #languages-block-top ul li:hover a {
-        background: #484848; }
+      #languages-block-top ul li > span { 
+       }
+      #languages-block-top ul li.selected, #languages-block-top ul li:hover a { font-family: 'Raleway', serif;
+        font-weight: 800;
+        font-size:12px; }
 
 /*# sourceMappingURL=blocklanguages.css.map */
