--- a/modules/maps/css/maps.css
+++ b/modules/maps/css/maps.css
@@ -1,6 +1,35 @@
-div#maps_block_home p {
-	width: 100%;
-  margin: auto;
+.informations{
+	width:100%;height:20%;
+	background-color:#808990;
+	text-align: center;
+	margin-top: -4px;
 }
-
-
+.informations::before{
+	height: 100%;
+	content: '';
+	display: inline-block;
+	vertical-align: middle;
+}
+.informations > div{
+	display: inline-block;
+	vertical-align: middle;
+	width:99%;
+}
+.informations div div{
+	display: inline-block;
+	vertical-align: top;
+	text-align: left;
+	width:11%;
+	margin:0 25px;
+}
+.informations div div p{
+	font-family: 'Raleway', serif;
+	color:white;
+	font-size:18px;
+}
+.informations div div p span{
+	font-weight: 400;
+	font-size:12px;
+	text-transform: uppercase;
+	color:#c8c8c8;
+}
