--- a/themes/default-bootstrap/css/product_list.css
+++ b/themes/default-bootstrap/css/product_list.css
@@ -1,6 +1,7 @@
 /*******************************************************
 Product list Styles
 ********************************************************/
+#category #left_column{width:0;}
 ul.product_list{
   height:100%;width:80%;
   margin: 0 auto;
