--- a/themes/default-bootstrap/css/product_list.css
+++ b/themes/default-bootstrap/css/product_list.css
@@ -48,13 +48,7 @@ ul.product_list .color-list-container {
 ul.product_list .product-image-container {
   text-align: center; }
   ul.product_list .product-image-container img {
-    margin: 0 auto;height:100%;width:auto;
-    opacity: 1;
-    -webkit-transition: all .2s ease;
-    transition: all .2s ease; }
-    ul.product_list.grid > li:hover .product-image-container img{
-      opacity: .5;
-    }
+    margin: 0 auto;height:100%;width:auto; }
   ul.product_list .product-image-container .quick-view-wrapper-mobile {
     display: none; }
     ul.product_list .product-image-container .quick-view-wrapper-mobile .quick-view-mobile {
@@ -254,7 +248,6 @@ ul.product_list.grid > li {
       letter-spacing: 1.7px;
       margin-top:5px; }
     ul.product_list.grid > li .product-container .content_price { margin-top:10px;display: block;}
-    ul.product_list.grid > li:hover .product-container .content_price { display:none;}
     ul.product_list.grid > li .product-container .old-price,
     ul.product_list.grid > li .product-container .price,
     ul.product_list.grid > li .product-container .price-percent-reduction { }
