--- a/themes/default-bootstrap/css/global.css
+++ b/themes/default-bootstrap/css/global.css
@@ -5526,6 +5526,10 @@ header {
   width:100%;
   height:100%; 
 }
+#authentication #center_column, #order #center_column, #my-account #center_column, #address #center_column, #contact #center_column, #cms #center_column{
+  width:1200px;
+  margin:0 auto;
+}
 #center_column .category-page-link{
   height:30px;
   position:absolute;
